RAVE-373 inject wookie configuration through Spring
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1208410 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-components/rave-core/src/test/resources/portal.properties
+++ b/rave-components/rave-core/src/test/resources/portal.properties
@@ -35,3 +35,6 @@ portal.jpaVendorAdapter.showSql=true
 portal.openjpa.Log=DefaultLevel=WARN, Runtime=INFO, Tool=INFO, SQL=TRACE
 portal.openjpa.RuntimeUnenhancedClasses=supported
 portal.openjpa.jdbc.SynchronizeMappings=buildSchema(ForeignKeys=true)
+
+provider.wookie.wookieServerUrl=http://localhost:8080/wookie
+provider.wookie.wookieApiKey=TEST
