--- a/rave-portal-resources/src/main/resources/portal.properties
+++ b/rave-portal-resources/src/main/resources/portal.properties
@@ -49,3 +49,6 @@ portal.jpaVendorAdapter.showSql=true
 portal.openjpa.Log=DefaultLevel=WARN, Runtime=INFO, Tool=INFO, SQL=TRACE
 portal.openjpa.RuntimeUnenhancedClasses=unsupported
 portal.openjpa.jdbc.SynchronizeMappings=buildSchema(ForeignKeys=true)
+
+provider.wookie.wookieServerUrl=http://localhost:8080/wookie
+provider.wookie.wookieApiKey=TEST
