[maven-release-plugin] prepare release 0.6-incubating
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1208866 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-demo-gadgets/pom.xml
+++ b/rave-demo-gadgets/pom.xml
@@ -25,13 +25,13 @@
 	<parent>
 		<groupId>org.apache.rave</groupId>
 		<artifactId>rave-project</artifactId>
-		<version>0.6-incubating-SNAPSHOT</version>
+		<version>0.6-incubating</version>
 	</parent>
 
 	<groupId>org.apache.rave</groupId>
 	<artifactId>rave-demo-gadgets</artifactId>
 	<packaging>war</packaging>
-	<version>0.6-incubating-SNAPSHOT</version>
+	<version>0.6-incubating</version>
 	<name>Apache Rave :: Demo Gadgets</name>
     <description>Apache Rave Demo Gadgets</description>
     <build>
