RAVE-97: Code in support of dynamic page layout templates. Still TODO: un-hardcode the layout picklist items from the dialog box
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1215234 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/portal.properties
+++ b/rave-portal-resources/src/main/resources/portal.properties
@@ -19,7 +19,7 @@
 
 #
 # These properties are used to construct the opensocial engine's URL. See 
-# for example home.jsp. Changing them does not change the actual path configuration
+# for example page.jsp. Changing them does not change the actual path configuration
 # of shindig.
 #
 portal.opensocial_engine.protocol=http
