--- a/rave-portal/src/test/resources/portal.properties
+++ b/rave-portal/src/test/resources/portal.properties
@@ -19,7 +19,7 @@
 
 #
 # These properties are used to construct the opensocial engine's URL. See 
-# for example home.jsp. Changing them does not change the actual path configuration
+# for example page.jsp. Changing them does not change the actual path configuration
 # of shindig.
 #
 portal.opensocial_engine.protocol=http
