--- a/rave-shindig/src/test/resources/rave.shindig.properties
+++ b/rave-shindig/src/test/resources/rave.shindig.properties
@@ -55,12 +55,9 @@ shindig.features.default=res://features/features.txt
 # Location of container configurations (comma separated)
 shindig.containers.default=res://containers/default/container.js
 
-# A file containing blacklisted gadgets.
-shindig.blacklist.file=
-
 ### Inbound OAuth support
 # The URL base to use for full OAuth support (three-legged)
-shindig.oauth.base-url=/oauth/
+shindig.oauth.base-url=/oauth
 shindig.oauth.authorize-action=/WEB-INF/authorize.jsp
 # The range to the past and future of timestamp for OAuth token validation. Default to 5 minutes
 shindig.oauth.validator-max-timestamp-age-ms=300000
@@ -69,8 +66,23 @@ shindig.oauth.validator-max-timestamp-age-ms=300000
 shindig.signing.state-key=
 shindig.signing.key-name=
 shindig.signing.key-file=
-shindig.signing.global-callback-url=http://localhost:8080%contextRoot%/gadgets/oauthcallback
+shindig.signing.global-callback-url=http://%authority%%contextRoot%/gadgets/oauthcallback
 shindig.signing.enable-signed-callbacks=true
+
+### If a OAuth2Client does not specify a redirect uri it will default here
+shindig.oauth2.global-redirect-uri=http://%authority%%contextRoot%/gadgets/oauth2callback
+### Setting to true will cause the registered OAuth2Persistence plugin to load it's values
+### with what's in config/oauth2.json, no meaning without a second persistence implementation.
+shindig.oauth2.import=false
+### Determines if the import will start by removing everything currently in persistence.
+shindig.oauth2.import.clean=false
+# Set to true if you want to allow the use of 3-party (authorization_code) OAuth 2.0 flow when viewer != owner.
+# This setting is not recommeneded for pages that allow user-controlled javascript, since
+# that javascript could be used to make unauthorized requests on behalf of the viewer of the page
+shindig.oauth2.viewer-access-tokens-enabled=true
+# Set to true to send extended trace messages to the client.  Probably want this to be false for
+# production systems and true for test/development.
+shindig.oauth2.send-trace-to-client=true
 
 # Set to true if you want to allow the use of 3-legged OAuth tokens when viewer != owner.
 # This setting is not recommeneded for pages that allow user-controlled javascript, since
@@ -80,14 +92,12 @@ shindig.signing.viewer-access-tokens-enabled=false
 # If enabled here, configuration values can be found in container configuration files.
 shindig.locked-domain.enabled=false
 
-# TODO (Shindig): This needs to be moved to container configuration.
+# TODO: This needs to be moved to container configuration.
 shindig.content-rewrite.only-allow-excludes=false
 shindig.content-rewrite.include-urls=.*
 shindig.content-rewrite.exclude-urls=
 shindig.content-rewrite.include-tags=body,embed,img,input,link,script,style
 shindig.content-rewrite.expires=86400
-shindig.content-rewrite.proxy-url=%contextRoot%/gadgets/proxy?container=default&url=
-shindig.content-rewrite.concat-url=%contextRoot%/gadgets/concat?container=default&
 shindig.content-rewrite.enable-split-js-concat=true
 shindig.content-rewrite.enable-single-resource-concat=false
 
@@ -100,7 +110,7 @@ shindig.gadget-rewrite.default-forced-libs=core:rpc
 
 #
 # Allow supported JavaScript features required by a gadget to be externalized on demand
-shindig.gadget-rewrite.externalize-feature-libs=false
+shindig.gadget-rewrite.externalize-feature-libs=true
 
 # Configuration for image rewriter
 shindig.image-rewrite.max-inmem-bytes = 1048576
@@ -208,3 +218,15 @@ org.apache.shindig.gadgets.uri.urlMaxLength=2048
 
 # Default cachettl value for versioned url in seconds. Here default value is 1 year.
 org.apache.shindig.gadgets.servlet.longLivedRefreshSec=31536000
+
+# Closure compiler optimization level.  One of advanced|simple|whitespace_only|none.
+# Defaults to simple.
+shindig.closure.compile.level=simple
+
+# OAuth 2.0 authorization code, access token, and refresh token expiration times.
+# 5 * 60 * 1000 = 300000 = 5 minutes
+# 5 * 60 * 60 * 1000 = 18000000 = 5 hours
+# 5 * 60 * 60 * 1000 * 24 = 432000000 = 5 days
+shindig.oauth2.authCodeExpiration=300000
+shindig.oauth2.accessTokenExpiration=18000000
+shindig.oauth2.refreshTokenExpiration=432000000
