(RAVE-134) Committing recaptcha patch contributed by Marijan Milicevic
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1228180 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-components/rave-core/pom.xml
+++ b/rave-components/rave-core/pom.xml
@@ -137,7 +137,14 @@
             <groupId>com.ibm.icu</groupId>
             <artifactId>icu4j</artifactId>
         </dependency>
-        
+
+        <!--  Captcha -->
+        <dependency>
+            <groupId>net.tanesha.recaptcha4j</groupId>
+            <artifactId>recaptcha4j</artifactId>
+        </dependency>
+
+
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
