--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <cobertura.version>2.5.1</cobertura.version>
         <org.hamcrest.version>1.1</org.hamcrest.version>
         <tiles.version>2.2.2</tiles.version>
+        <recaptcha4j.version>0.0.7</recaptcha4j.version>
 
         <!-- The location of Rave's H2 file DB. No trailing / -->
         <rave.database.location>/tmp/rave_db</rave.database.location>
@@ -354,6 +355,12 @@
                 <groupId>org.apache.tiles</groupId>
                 <artifactId>tiles-jsp</artifactId>
                 <version>${tiles.version}</version>
+            </dependency>
+            <!-- Captcha -->
+            <dependency>
+                <groupId>net.tanesha.recaptcha4j</groupId>
+                <artifactId>recaptcha4j</artifactId>
+                <version>${recaptcha4j.version}</version>
             </dependency>
 
             <!-- Test -->
