--- a/rave-providers/rave-opensocial-provider/pom.xml
+++ b/rave-providers/rave-opensocial-provider/pom.xml
@@ -43,6 +43,10 @@
             <groupId>org.apache.rave</groupId>
             <artifactId>rave-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
         
         <dependency>
             <groupId>org.slf4j</groupId>
