Adding a java system property to the cargo run configuration which will cause H2 to use localhost as the server name that it puts into the lock file when starting up its automatic tcp server.  This resolves an issue that causes shindig to sometimes fail to connect to the auto-started H2 tcp server when VPN connected to the network.
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1228328 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal/pom.xml
+++ b/rave-portal/pom.xml
@@ -123,7 +123,7 @@
                     <configuration>
                         <properties>
                             <cargo.jvmargs>
-                                <![CDATA[-Xdebug -Xrunjdwp:transport=dt_socket,address=${cargo.debug.address},server=y,suspend=${cargo.debug.suspend} -noverify ${javaagent} ${cargo.args}]]>
+                                <![CDATA[-Dh2.bindAddress="localhost" -Xdebug -Xrunjdwp:transport=dt_socket,address=${cargo.debug.address},server=y,suspend=${cargo.debug.suspend} -noverify ${javaagent} ${cargo.args}]]>
                             </cargo.jvmargs>
                             <cargo.tomcat.context.reloadable>true</cargo.tomcat.context.reloadable>
                         </properties>
