Updating ConfigurablePropertiesModule to load properties from rave.shindig.properties instead of shindig.properties.  This allows us to change the default shindig properties in rave.shindig.properties and have those changes reflected in shindig at runtime as one would expect.
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1228366 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-shindig/src/test/resources/rave.shindig.properties
+++ b/rave-shindig/src/test/resources/rave.shindig.properties
@@ -17,10 +17,16 @@
 # under the License.
 #
 
-###################################################################################
-## These are the properties which are specific for the Rave extension of Shindig ##
-###################################################################################
+#####################################################################################
+## These are the properties which are specific for the Rave extension of Shindig   ##
+## All of the properties in this file end up being read and made available to      ##
+## both Spring and Guice.  Note that in a Rave installation this file replaces     ##
+## the regular shindig.properties file - so if you need to make changes to shindig ##
+## properties, make them here.                                                     ##
+#####################################################################################
 
+# The three properties below can either be changed here or can be set via environmental variables.
+# If set as environmental variables, those values will take precedence.
 shindig.host=localhost
 shindig.port=8080
 shindig.contextroot=
