More shindig.properties cleanup.  This commit removes all of the unnecessary properties from the various shindig.properties files to help avoid confusion.
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1228398 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-shindig/src/main/resources/rave.shindig.properties
+++ b/rave-shindig/src/main/resources/rave.shindig.properties
@@ -1,4 +1,3 @@
-#
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
 # distributed with this work for additional information
@@ -7,7 +6,7 @@
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
 #
-#   http://www.apache.org/licenses/LICENSE-2.0
+#  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
@@ -15,12 +14,17 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-#
 
-###################################################################################
-## These are the properties which are specific for the Rave extension of Shindig ##
-###################################################################################
+#####################################################################################
+## These are the properties which are specific for the Rave extension of Shindig.  ##
+## All of the properties in this file end up being read and made available to      ##
+## both Spring and Guice.  Note that in a Rave installation this file replaces     ##
+## the regular shindig.properties file - so if you need to make changes to shindig ##
+## properties, make them here.                                                     ##
+#####################################################################################
 
+# The three properties below can either be changed here or can be set via environmental variables.
+# If set as environmental variables, those values will take precedence.
 shindig.host=localhost
 shindig.port=8080
 shindig.contextroot=
@@ -44,11 +48,12 @@ rave-shindig.openjpa.Log=DefaultLevel=WARN, Runtime=INFO, Tool=INFO, SQL=TRACE
 rave-shindig.openjpa.RuntimeUnenhancedClasses=warn
 rave-shindig.openjpa.jdbc.SynchronizeMappings=buildSchema(ForeignKeys=true)
 
-#########################################################
-## These are the properties for that came from Shindig ##
-## In the default setup %contextRoot% is replaced with ##
-## the value from shindig.contextroot.                 ##
-#########################################################
+#################################################################################
+## These properties are a copy/paste from the default shindig.properties file. ##
+## If you upgrade shindig you will likely need to do another copy/paste of the ##
+## default shindig.properties values here.  In the default setup %contextRoot% ##
+## is replaced with the value from shindig.contextroot.                        ##
+#################################################################################
 
 # Location of feature manifests (comma separated)
 shindig.features.default=res://features/features.txt
