RAVE-444 add out of the box ldap authentication with one way userdetail copy (from LDAP to Rave)
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1236679 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-dependencies/pom.xml
+++ b/rave-portal-dependencies/pom.xml
@@ -55,7 +55,7 @@
             <groupId>org.apache.rave</groupId>
             <artifactId>rave-w3c-provider</artifactId>
         </dependency>
-        
+
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -94,6 +94,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-oxm</artifactId>
             <version>${org.springframework.version}</version>
@@ -111,6 +116,12 @@
                     <artifactId>guice</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- Apache DS (LDAP) -->
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-core</artifactId>
         </dependency>
 
         <!-- JSTL -->
@@ -134,7 +145,7 @@
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-jsp</artifactId>
         </dependency>
-        
+
     </dependencies>
 
 </project>
