--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <properties>
         <apache.shindig.version>3.0.0-beta4</apache.shindig.version>
         <org.springframework.version>3.1.0.RELEASE</org.springframework.version>
-        <org.springframework.mobile.version>1.0.0.M3</org.springframework.mobile.version>        
+        <org.springframework.mobile.version>1.0.0.M3</org.springframework.mobile.version>
         <jstl.version>1.2</jstl.version>
         <javax.servlet.version>2.5</javax.servlet.version>
         <jsp-api.version>2.1</jsp-api.version>
@@ -71,6 +71,7 @@
         <org.hamcrest.version>1.1</org.hamcrest.version>
         <tiles.version>2.2.2</tiles.version>
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
+        <apacheds.version>1.5.5</apacheds.version>
 
         <!-- The location of Rave's H2 file DB. No trailing / -->
         <rave.database.location>/tmp/rave_db</rave.database.location>
@@ -243,6 +244,11 @@
                 <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-ldap</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${org.springframework.version}</version>
@@ -256,7 +262,7 @@
                     <artifactId>spring-web</artifactId>
                 </exclusion>
             </exclusions>
-            </dependency>                        
+            </dependency>
             <dependency>
                 <groupId>com.google.inject.extensions</groupId>
                 <artifactId>guice-persist</artifactId>
@@ -392,6 +398,20 @@
                 <artifactId>recaptcha4j</artifactId>
                 <version>${recaptcha4j.version}</version>
             </dependency>
+
+            <!-- ApacheDS (LDAP) -->
+            <dependency>
+                <groupId>org.apache.directory.server</groupId>
+                <artifactId>apacheds-core</artifactId>
+                <version>${apacheds.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.directory.server</groupId>
+                <artifactId>apacheds-server-jndi</artifactId>
+                <version>${apacheds.version}</version>
+            </dependency>
+
 
             <!-- Test -->
             <dependency>
