--- a/rave-portal/pom.xml
+++ b/rave-portal/pom.xml
@@ -102,17 +102,23 @@
             <artifactId>spring-test</artifactId>
         </dependency>
 
+        <!-- apacheds-server-jndi needed for embedded Apache DS, not needed for external LDAP -->
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-server-jndi</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
-	<defaultGoal>install</defaultGoal>
-	<testResources>
-	  <testResource>
-	      <directory>src/test/resources</directory>
-	      <filtering>true</filtering>
-	  </testResource>
-	</testResources>
-		
+        <defaultGoal>install</defaultGoal>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
+
         <plugins>
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
@@ -162,7 +168,7 @@
                         <zipUrlInstaller>
                             <downloadDir>${settings.localRepository}/org/codehaus/cargo/cargo-container-archives</downloadDir>
                             <url>
-                                http://archive.apache.org/dist/tomcat/tomcat-6/v6.0.32/bin/apache-tomcat-6.0.32.tar.gz
+                                http://archive.apache.org/dist/tomcat/tomcat-6/v6.0.35/bin/apache-tomcat-6.0.35.tar.gz
                             </url>
                         </zipUrlInstaller>
                         <systemProperties>
