RAVE-453: fix duplicate jar problem with rave-shindig module caused by using a war overlay on shindig-server which maven cannot check and align on dependency resolution See: https://issues.apache.org/jira/browse/RAVE-453
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1238125 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-shindig/pom.xml
+++ b/rave-shindig/pom.xml
@@ -170,6 +170,21 @@
 
         <plugins>
             <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-war-plugin</artifactId>
+              <configuration>
+                <overlays>
+                  <overlay>
+                    <groupId>org.apache.shindig</groupId>
+                    <artifactId>shindig-server</artifactId>
+                    <excludes>
+                      <exclude>WEB-INF/lib/json-20070829.jar</exclude>
+                    </excludes>
+                  </overlay>
+                </overlays>
+              </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>openjpa-maven-plugin</artifactId>
                 <version>1.2</version>
